@@ -12,9 +12,9 @@ endfunction
 
 module t;
     initial begin
-        int arr [1:0] = {0, 0};
+        int arr [3][3] = {{1, 2, 3}, {4, 5, 6}, {7, 8, 9}};
         i = 0;
-        arr[postincrement_i()]++;
+        arr[postincrement_i()][postincrement_i()]++;
         $display("Value: %d", i);
     end
 endmodule
