@@ -16,6 +16,7 @@ Verilator 5.033 devel
 * Add COVERIGN warning, as a more specific UNSUPPORTED error.
 * Support generated classes (#5665). [Shou-Li Hsu]
 * Support `+incdir` with multiple directories.
+* Support side effects of form 'variable[index_function()]++'.
 * Fix error message when call task as a function (#3089). [Matthew Ballance]
 * Fix V3Simulate constant reuse (#5709). [Geza Lore]
 * Fix man pages what-is section (#5710). [Ahmed El-Mahmoudy]
